@@ -6,11 +6,11 @@ dnl libexslt is an extension
 dnl
 LIBXSLT_MAJOR_VERSION=1
 LIBXSLT_MINOR_VERSION=0
-LIBXSLT_MICRO_VERSION=25
+LIBXSLT_MICRO_VERSION=26
 PACKAGE=libxslt
 LIBEXSLT_MAJOR_VERSION=0
 LIBEXSLT_MINOR_VERSION=7
-LIBEXSLT_MICRO_VERSION=16
+LIBEXSLT_MICRO_VERSION=17
 LIBXML_REQUIRED_VERSION=2.5.2
 
 
