@@ -83,12 +83,17 @@ A:link, A:visited, A:active { text-decoration: underline }
 <td valign="top" bgcolor="#8b7765"><table border="0" cellspacing="0" cellpadding="1" width="100%"><tr><td><table border="0" cellspacing="0" cellpadding="1" width="100%" bgcolor="#000000"><tr><td><table border="0" cellpadding="3" cellspacing="1" width="100%"><tr><td bgcolor="#fffacd">
 <h3>CVS only : check the <a href="http://cvs.gnome.org/lxr/source/libxslt/ChangeLog">Changelog</a> file
 for a really accurate description</h3>
+<h3>1.0.26: Feb 10 2003</h3>
+<ul>
+<li>Fixed 3 serious bugs in document() and stylesheet compilation which
+    could lead to a crash</li>
+</ul>
 <h3>1.0.25: Feb 5 2003</h3>
 <ul>
 <li>Bug fix: double-free for standalone stylesheets introduced in 1.0.24, C
     syntax pbm, 3 bugs reported by Eric van der Vlist</li>
   <li>Some XPath and XInclude related problems were actually fixed in
-    libxml2-2.5.2 </li>
+    libxml2-2.5.2</li>
   <li>Documentation: emphasize taht --docbook is not for XML docs.</li>
 </ul>
 <h3>1.0.24: Jan 14 2003</h3>
