@@ -267,12 +267,18 @@ platform, get in touch with me to upload the package. I will keep them in the
 href="http://cvs.gnome.org/lxr/source/libxslt/ChangeLog">Changelog</a> file
 for a really accurate description</h3>
 
+<h3>1.0.26: Feb 10 2003</h3>
+<ul>
+  <li>Fixed 3 serious bugs in document() and stylesheet compilation which
+    could lead to a crash</li>
+</ul>
+
 <h3>1.0.25: Feb 5 2003</h3>
 <ul>
   <li>Bug fix: double-free for standalone stylesheets introduced in 1.0.24, C
     syntax pbm, 3 bugs reported by Eric van der Vlist</li>
   <li>Some XPath and XInclude related problems were actually fixed in
-    libxml2-2.5.2 </li>
+    libxml2-2.5.2</li>
   <li>Documentation: emphasize taht --docbook is not for XML docs.</li>
 </ul>
 
